# lqr_lateral_controller

./: CMakeLists.txt  README.md  package.xml
include/lqr_lateral_controller/: lqr.hpp  lqr_lateral_controller.hpp  lqr_lateral_controller_node.hpp  visibility_control.hpp
launch/: lqr_lateral_controller.launch.py
src/: lqr.cpp  lqr_lateral_controller.cpp  lqr_lateral_controller_node.cpp
test/: test_lqr_lateral_controller.cpp
