<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lqr_lateral_controller</name>
  <version>1.0.0</version>
  <description>LQR lateral controller implementation for F1Tenth AWSIM.</description>
  <maintainer email="milosz.gajewski@student.put.poznan.pl">Milosz Gajewski</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>launch_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>trajectory_follower_base</depend>
  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vehicle_info_util</depend>
  <depend>motion_utils</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
